# ai-gtm-command-center

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: good_first_issue.md
docs/: founder-use-case.md  founder_linkedin_dm_workflow.md  google_sheets_setup.md  how-to-fork-and-use.md  operating-rhythm.md  recent_fundraising_outreach_workflow.md  sample_gtm_brief.md  where-this-fits-in-founder-os.md
docs/demo_output/: crm_import.csv  draft_queue.csv  founder_outreach_tracker_import.csv  gtm_brief.md  gtm_report.html  linkedin_dm_queue.csv  recommendations.json
examples/: persona.md  target_accounts.csv
src/gtm_command_center/: __init__.py  cli.py  fundraising_scout.py  llm.py  models.py  pipeline.py  prompts.py  reporting.py  research.py  sheets.py  utils.py
templates/: target_accounts_template.csv
tests/: test_fundraising_scout.py  test_pipeline.py  test_sheets.py
